KSW-92 fix commlog multi email adress wrapping

--- a/softWrench.sW4.Web/Content/styles/default/grid.css
+++ b/softWrench.sW4.Web/Content/styles/default/grid.css
@@ -98,7 +98,7 @@
         word-break: break-word;
     }
 
-    #listgrid td {
+    #listgrid td, #compositionlistgrid td {
         word-break: break-all;
         word-break: break-word;
     }
